Fix text wrapping

--- a/src/app/(webApp)/stylesheets/checkout.module.css
+++ b/src/app/(webApp)/stylesheets/checkout.module.css
@@ -24,6 +24,8 @@
   place-content: center;
   padding: 0.25em 0;
   box-sizing: border-box;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .cartDisplay tr th {
